fix: page change on delete and category change, Heading overflow

--- a/src/css/ListPost.css
+++ b/src/css/ListPost.css
@@ -105,4 +105,5 @@
     font-family: "Open Sans", monospace, sans-serif;
     color: #a52a2a;
     margin-left: 20%;
+    margin-bottom: 10px;
   }
